--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -5,7 +5,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '25 10 * * *'   # Runs daily at 10:25 UTC (specific time)
+    - cron: '45 10 * * *'
   workflow_dispatch:
 
 jobs:
